fix: fallback not showing properly on some browser

--- a/style.css
+++ b/style.css
@@ -124,18 +124,13 @@ h1 {
     color: #0CD977;
 }
 
-
-.no-pic-profile::before{
-
-    border-radius: 50%;
-    padding: 10px 12px;
-    background-color: #0CD977;
-    
-    font-size: 2rem;
-}
-.no-pic-profile{
-    
+.no-img-container{
+    font-size: 1.5rem;
+    width: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #0CD977;
+    border-radius: 50%;
+    aspect-ratio: 1;
 }
